--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "start": "parcel src/index.html --open",
-    "build": "parcel build src/index.html"
+    "build": "parcel build src/index.html && cp public/* dist/"
   },
   "devDependencies": {
     "parcel": "^2.0.0-rc.0"
